--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SIVA PRASAD</title>
-    <link rel="stylesheet" href="C:\Users\siva\Desktop\Website Devolopment\css\style.css">
+    <link rel="stylesheet" href="css\style.css">
     <link rel="icon" href="css\images">
   </head>
   <body>
